# assist

./: .gitignore  .gitmodules  Doxyfile.in  README.md
Assist/: CMakeLists.txt  assistVersion.h
Assist/Astrodynamics/: CMakeLists.txt  astrodynamicsBasics.h  body.h  dataUpdater.h  hillSphere.h  unitConversions.h  void.cpp
Assist/Astrodynamics/UnitTests/: unitTestAstrodynamics.cpp  unitTestAstrodynamicsBasics.cpp  unitTestBody.cpp  unitTestDataUpdater.cpp  unitTestHillSphere.cpp  unitTestUnitConversions.cpp
Assist/Basics/: CMakeLists.txt  basics.h  commonTypedefs.h  comparisonFunctions.h  operatorOverloadFunctions.h  void.cpp
Assist/Basics/UnitTests/: unitTestBasics.cpp  unitTestCommonTypedefs.cpp  unitTestComparisonFunctions.cpp  unitTestOperatorOverloadFunctions.cpp
Assist/Database/: CMakeLists.txt  sqlite3DatabaseConnector.h
Assist/InputOutput/: CMakeLists.txt  basicInputOutput.cpp  basicInputOutput.h  rootPath.h
Assist/InputOutput/UnitTests/: testInputFileCustomCommentCharacter.txt  testInputFileDefaultCommentCharacter.txt  unitTestBasicInputOutput.cpp  unitTestInputOutput.cpp  unitTestRootPath.cpp
Assist/Mathematics/: CMakeLists.txt  statistics.cpp  statistics.h
Assist/Mathematics/UnitTests/: unitTestMathematics.cpp  unitTestStatistics.cpp
CMakeModules/: FindAssist.cmake  FindTudat.cmake  FindTudatCore.cmake
Documentation/: annotated.html  assist_version_8h_source.html  basic_input_output_8h_source.html  basics_8h_source.html  body_8h_source.html  classassist_1_1astrodynamics_1_1_body-members.html  classassist_1_1astrodynamics_1_1_body.html  classassist_1_1astrodynamics_1_1_data_updater-members.html  classassist_1_1astrodynamics_1_1_data_updater.html  classassist_1_1basics_1_1_compare_double_key_double_value_map_relative_distances-members.html  classassist_1_1basics_1_1_compare_double_key_double_value_map_relative_distances.html  classassist_1_1basics_1_1_compare_double_key_double_value_map_values-members.html  classassist_1_1basics_1_1_compare_double_key_double_value_map_values.html  classassist_1_1database_1_1_sqlite3_database_connector-members.html  classassist_1_1database_1_1_sqlite3_database_connector.html  classes.html  common_typedefs_8h_source.html  comparison_functions_8h_source.html  data_updater_8h_source.html  dir_39b53e63483dd520eaac6c81674232b1.html  dir_77d854acc838a1a67c64a2c9ea49ff7a.html  dir_b2d173c4acd871444f01e8c5e4744d97.html  dir_d00f5e20d7b27686287f9c84bc9112f8.html  files.html  functions.html  functions_func.html  index.html  operator_overload_functions_8h_source.html  sqlite3_database_connector_8h_source.html  unit_conversions_8h_source.html
Documentation/search/: all_62.js  all_63.js  all_64.js  all_67.js  all_73.js  all_75.js  classes_62.js  classes_63.js  classes_64.js  classes_73.js  functions_62.js  functions_63.js  functions_64.js  functions_6f.js  functions_73.js  functions_7e.js  search.js
GeneralCPlusPlusTools/: CMakeLists.txt
GeneralCPlusPlusTools/Astrodynamics/: CMakeLists.txt  body.h  dataUpdater.h
GeneralCPlusPlusTools/Astrodynamics/UnitTests/: unitTestBody.cpp  unitTestDataUpdater.cpp
GeneralCPlusPlusTools/Basics/: CMakeLists.txt  basics.h  commonTypedefs.h  comparisonFunctions.h
GeneralCPlusPlusTools/Basics/UnitTests/: unitTestBasics.cpp  unitTestCommonTypedefs.cpp  unitTestComparisonFunctions.cpp
GeneralCPlusPlusTools/CMakeModules/: FindGeneralTools.cmake
